config: locked to npm

--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "nextjs-fullstack-app-template",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.17",
+    "yarn": "please-use-npm",
+    "npm": ">=10.2.3"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
