--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "engines": {
     "node": ">=18.17.0",
     "yarn": "please-use-npm",
-    "npm": ">=10.2.3"
+    "npm": ">=9.6.7"
   },
   "scripts": {
     "dev": "next dev",
@@ -21,6 +21,8 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
